<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NiceController</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="unknow">未知</string>
    <string name="txt_list">未知</string>
    <string name="setTag">设置TAG</string>

    <!-- login -->
    <string name="login_name">账号</string>
    <string name="mac">mac:</string>
    <string name="alias">昵称:</string>
    <string name="register">申请注册</string>
    <string name="login">登录</string>
    <string name="admin_pwd">请输入管理员密码：</string>
    <string name="dialog_net_error">网络错误</string>
    <string name="dialog_ok">确定</string>
    <string name="ok">确定</string>
    <string name="old_pwd">旧密码:</string>
    <string name="new_pwd">新密码:</string>
    <string name="sign_out">退出登录</string>

    <!-- 注册用户管理 -->
    <string name="register_user_manager">注册用户管理</string>
    <string name="register_user_manager_del">删除</string>

    <!-- 修改服务器url -->
    <string name="modify_url">输入新的URL</string>

</resources>