<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_admin_pwd"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/btn_selector"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:background="@drawable/btn_selector"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_admin_pwd"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/admin_pwd"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_admin_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:password="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>